<?xml version="1.0"?>
<project name="org.sbgn" default="dist" basedir=".">
	
  <property name="jar.name" value="../dist/org.sbgn.jar"/>
  <property name="sbgn.xsd" value="../resources/SBGN.xsd"/>
  
  <target name="prepare">
	<tstamp /> <!-- set ${TODAY} and ${TSTAMP} -->
	<mkdir dir="build"/>
	<mkdir dir="gensrc"/>
	<mkdir dir="../docs"/>
	<mkdir dir="../dist"/>
  </target>

	<path id="project.classpath">
		<fileset dir="lib">
			<include name="*.jar"/>
		</fileset>
		<pathelement location="resources"/>
	</path>

  <taskdef name="xjc" classname="com.sun.tools.xjc.XJCTask">
    <classpath refid="project.classpath"/>
  </taskdef>

  <target name="jaxb" depends="prepare">
	<xjc schema="${basedir}/${sbgn.xsd}" destdir="${basedir}/gensrc" package="org.sbgn.bindings" />
  </target>
  
  <target name="build" depends="jaxb">
	<javac srcdir="gensrc"
		   includes="**"
		   debug="true"
		   destdir="build"
		   includeantruntime="false">
		   <classpath refid="project.classpath"/>
	</javac>
	<javac srcdir="src"
		   includes="**"
		   debug="true"
		   destdir="build"
		   includeantruntime="false">
		   <classpath refid="project.classpath"/>
	</javac>
	<copy toDir="build">
		<fileset dir="../validation/rules" includes="*.sch"/>
        <fileset dir="../validation/schematron" includes="*.xsl"/>
		<fileset dir="../resources" includes="SBGN.xsd"/>
	</copy>
  </target>
  
  <target name="jar" depends="build">
    <manifestclasspath property="manifest.cp" jarfile="${jar.name}">
	  <classpath refid="project.classpath"/>
    </manifestclasspath>
	<jar jarfile="${jar.name}" manifest="META-INF/MANIFEST.MF">
	  <fileset dir="build">
		<include name="**/*.class"/>
		<include name="**/*.xsl"/>
		<include name="**/*.sch"/>
	  </fileset>
	  <fileset dir="src" includes="**/*.properties"/>
	  <fileset dir="../resources" includes="SBGN.xsd"/>
	  <manifest>
	     <attribute name="Main-Class" value="org.sbgn.Main"/>
		 <attribute name="Class-Path" value="${manifest.cp}"/>
	  </manifest>
	</jar>	
  </target>

  <target name="fatjar" depends="jar">
    <mkdir dir="build/all"/>
     <unjar src="../dist/org.sbgn.jar" dest="build/all"/>
     <unjar dest="build/all">
	   <fileset dir=".">
	     <include name="lib/net.sf.saxon*.jar"/>
	   </fileset>
     </unjar>
	 <jar jarfile="../dist/org.sbgn-with-dependencies.jar" manifest="META-INF/MANIFEST.MF">
	   <fileset dir="build/all" includes="**/*"/>
	  <manifest>
	     <attribute name="Main-Class" value="org.sbgn.Main"/>
	  </manifest>	   
	</jar>
	<delete dir="build/all"/>
  </target>
  
  <target name="doc" depends="docJDK8, docNotJDK8"/>

  <target name="isJDK8">
    <condition property="JDK8">
      <equals arg1="${ant.java.version}" arg2="1.8"/>
    </condition>
  </target>
  
  <target name="docJDK8" if="JDK8" depends="build, isJDK8">
	<javadoc packagenames = "org.sbgn.bindings"
			destdir="../docs"
			footer="Generated ${TODAY}">
			<sourcepath>
				<pathelement location="src"/>
				<pathelement location="gensrc"/>
			</sourcepath>
			<arg value="-Xdoclint:none"/>
	</javadoc>

  </target>
  
  <target name="isNotJDK8">
    <condition property="notJDK8">
      <not>
        <equals arg1="${ant.java.version}" arg2="1.8"/>
      </not>
    </condition>
  </target>

  <target name="docNotJDK8" if="notJDK8" depends="build, isNotJDK8">
    <javadoc packagenames="org.sbgn.bindings" destdir="../docs">
			<arg value="--add-modules"/>
			<arg value="java.xml.bind"/>
    	    <!-- JDK 10 has the options -html4 and -html5, shows a warning when not specified -->
        	<!-- JDK 9 ignores the option, HTML 4.01 is the default -->
	        <!-- JDK 11 and above ignore the option, HTML 5 is the default -->
			<arg value="-html5"/>
			<modulepath>
				<pathelement location="lib"/>
			</modulepath>
			<sourcepath>
				<pathelement location="src"/>
				<pathelement location="gensrc"/>
			</sourcepath>
			<arg value="-Xdoclint:none"/>
			<bottom>Generated ${TODAY}</bottom>
    </javadoc>
  </target>

  <target name="clean">
	<delete dir="build"/>
	<delete dir="gensrc"/>
  </target>

  <target name="dist-clean" depends="clean">
	<delete file="${jar.name}"/>
  </target>

  <target name="dist" depends="jar"/>
			 
	<target name="test" depends="build">
		<path id="test.classpath">
			<path refid="project.classpath"/>
			<pathelement location="build"/>
			<pathelement location="buildlib/junit-4.13.1.jar"/>
			<pathelement location="buildlib/hamcrest-core-1.3.jar"/>
		</path>
		<javac srcdir="test" debug="true" 
					includes="**"
					destdir="build"
					source="1.8"
					includeantruntime="false">
			<classpath refid="test.classpath"/>
		</javac>		
		<junit printsummary="on" haltonfailure="true" fork="true">
			<formatter type="brief" usefile="false"/>
			<classpath refid="test.classpath"/>
			<batchtest>
				<fileset dir="test">
					<include name="**/*Test*.java"/>
				</fileset>
			</batchtest>
		</junit>
	</target>

</project>
